--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: SSM
 Type: Package
 Title: Sewage treatment plant surface water model 
 Version: 2.3
-Date: 2023-02-17
+Date: 2023-02-22
 Author: Martin Loos, Rebekka Gulde
 Maintainer: Martin Loos <mloos@envibee.ch>
 Description: Catchment-based micropollutant routing model for (swiss) sewage treatment plants, based on and extending the publication of Ort et al. (ES&T, 2009, 43, pp. 3214-3220)
@@ -11,3 +11,4 @@ Imports: openxlsx
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 LazyData: true
+Encoding: UTF-8
